Added div and a form in this file

--- a/index.html
+++ b/index.html
@@ -1,14 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./styles.css">
-    <title>Document</title>
+    <title>Movie Site</title>
 </head>
+
 <body>
-    
+    <header>
+        <form id="form">
+            <input type="text" placeholder="Search" id="search" class="search">
+
+        </form>
+    </header>
+
+    <main id="main">
+        <div class="movie">
+            <img src="https://tinyurl.com/29zdjyug" alt="image">
+            <div class="movieinfo">
+                <h3>Movie Title</h3>
+                <span class="green">9.8</span>
+            </div>
+            <div class="overview">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci a velit nesciunt. Adipisci, tenetur
+                rem architecto atque porro eligendi, facere asperiores maxime, obcaecati praesentium aut ipsum mollitia
+                distinctio laborum dolorum?
+            </div>
+        </div>
+        <div class="movie">
+            <img src="https://tinyurl.com/29zdjyug" alt="image">
+            <div class="movieinfo">
+                <h3>Movie Title</h3>
+                <span class="green">9.8</span>
+            </div>
+            <div class="overview">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci a velit nesciunt. Adipisci, tenetur
+                rem architecto atque porro eligendi, facere asperiores maxime, obcaecati praesentium aut ipsum mollitia
+                distinctio laborum dolorum?
+            </div>
+        </div>
+        <div class="movie">
+            <img src="https://tinyurl.com/29zdjyug" alt="image">
+            <div class="movieinfo">
+                <h3>Movie Title</h3>
+                <span class="green">9.8</span>
+            </div>
+            <div class="overview">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci a velit nesciunt. Adipisci, tenetur
+                rem architecto atque porro eligendi, facere asperiores maxime, obcaecati praesentium aut ipsum mollitia
+                distinctio laborum dolorum?
+            </div>
+        </div>
+        <div class="movie">
+            <img src="https://tinyurl.com/29zdjyug" alt="image">
+            <div class="movieinfo">
+                <h3>Movie Title</h3>
+                <span class="green">9.8</span>
+            </div>
+            <div class="overview">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci a velit nesciunt. Adipisci, tenetur
+                rem architecto atque porro eligendi, facere asperiores maxime, obcaecati praesentium aut ipsum mollitia
+                distinctio laborum dolorum?
+            </div>
+        </div>
+        <div class="movie">
+            <img src="https://tinyurl.com/29zdjyug" alt="image">
+            <div class="movieinfo">
+                <h3>Movie Title</h3>
+                <span class="green">9.8</span>
+            </div>
+            <div class="overview">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci a velit nesciunt. Adipisci, tenetur
+                rem architecto atque porro eligendi, facere asperiores maxime, obcaecati praesentium aut ipsum mollitia
+                distinctio laborum dolorum?
+            </div>
+        </div>
+
+    </main>
+
 
     <script src="./script.js"></script>
 </body>
+
 </html>
