Modified my HTML File

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <span class="green">9.8</span>
             </div>
             <div class="overview">
+                <h3>Overview</h3>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci a velit nesciunt. Adipisci, tenetur
                 rem architecto atque porro eligendi, facere asperiores maxime, obcaecati praesentium aut ipsum mollitia
                 distinctio laborum dolorum?
@@ -36,6 +37,7 @@
                 <span class="green">9.8</span>
             </div>
             <div class="overview">
+                <h3>Overview</h3>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci a velit nesciunt. Adipisci, tenetur
                 rem architecto atque porro eligendi, facere asperiores maxime, obcaecati praesentium aut ipsum mollitia
                 distinctio laborum dolorum?
@@ -48,6 +50,7 @@
                 <span class="green">9.8</span>
             </div>
             <div class="overview">
+                <h3>Overview</h3>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci a velit nesciunt. Adipisci, tenetur
                 rem architecto atque porro eligendi, facere asperiores maxime, obcaecati praesentium aut ipsum mollitia
                 distinctio laborum dolorum?
@@ -60,6 +63,7 @@
                 <span class="green">9.8</span>
             </div>
             <div class="overview">
+                <h3>Overview</h3>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci a velit nesciunt. Adipisci, tenetur
                 rem architecto atque porro eligendi, facere asperiores maxime, obcaecati praesentium aut ipsum mollitia
                 distinctio laborum dolorum?
@@ -72,12 +76,51 @@
                 <span class="green">9.8</span>
             </div>
             <div class="overview">
+                <h3>Overview</h3>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci a velit nesciunt. Adipisci, tenetur
                 rem architecto atque porro eligendi, facere asperiores maxime, obcaecati praesentium aut ipsum mollitia
                 distinctio laborum dolorum?
             </div>
         </div>
-
+        <div class="movie">
+            <img src="https://tinyurl.com/29zdjyug" alt="image">
+            <div class="movieinfo">
+                <h3>Movie Title</h3>
+                <span class="green">9.8</span>
+            </div>
+            <div class="overview">
+                <h3>Overview</h3>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci a velit nesciunt. Adipisci, tenetur
+                rem architecto atque porro eligendi, facere asperiores maxime, obcaecati praesentium aut ipsum mollitia
+                distinctio laborum dolorum?
+            </div>
+        </div>
+        <div class="movie">
+            <img src="https://tinyurl.com/29zdjyug" alt="image">
+            <div class="movieinfo">
+                <h3>Movie Title</h3>
+                <span class="green">9.8</span>
+            </div>
+            <div class="overview">
+                <h3>Overview</h3>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci a velit nesciunt. Adipisci, tenetur
+                rem architecto atque porro eligendi, facere asperiores maxime, obcaecati praesentium aut ipsum mollitia
+                distinctio laborum dolorum?
+            </div>
+        </div>
+        <div class="movie">
+            <img src="https://tinyurl.com/29zdjyug" alt="image">
+            <div class="movieinfo">
+                <h3>Movie Title</h3>
+                <span class="green">9.8</span>
+            </div>
+            <div class="overview">
+                <h3>Overview</h3>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci a velit nesciunt. Adipisci, tenetur
+                rem architecto atque porro eligendi, facere asperiores maxime, obcaecati praesentium aut ipsum mollitia
+                distinctio laborum dolorum?
+            </div>
+        </div>
     </main>
 
 
